2007-12-04  Titus Brown  <t@iorich.caltech.edu>

	* Fixed iterator double call (Antti Kaihola).

2007-07-02  C. Titus Brown  <t@chreotha>

	* Fixed small documentation error in commands (Bill Mill).

	* Fixed another problem match_parse: made popmatch work properly
	  (Sheryl).

2007-07-01  C. Titus Brown  <t@chreotha>

	* Moved 'mechanize' to '_mechanize_dist', 'ClientForm' to
	'_mechanize_dist.ClientForm', as requested for Debian dists.

	* Fixed a problem with __matchlist__ in match_parse extension
  	  (Sheryl).

	* All raised exceptions now inherit from TwillException (Kevin Turner).

	* Eliminated FakeResponse and switched to using
	  mechanize.make_response (Jacob Hallan, JJL).

	* Updated mechanize to latest; includes my two patches to mechanize.

2007-06-04  Titus Brown  <t@iorich.caltech.edu>

	* Updated mechanize to latest.

	* Patched subprocess pipe freeing problem (Chris Abraham).  (This
	  is a moderately serious bug for long-running programs that use
	  subprocess to try to run programs that don't exist.)

	  My patch modifies run_tidy to remember if subprocess failed because
	  tidy didn't exist.

2007-05-28  Titus Brown  <t@iorich.caltech.edu>

	* Added 'info' command, docs, and tests.

	* Removed gopherlib references in mechanize; added test.

2007-03-19  Titus Brown  <t@localhost.localdomain>

	* Fixed bug in my patch to mechanize 'select_form'.

	* Removed debug 'print' in wsgi_intercept.py.

2007-03-06  Titus Brown  <t@localhost.localdomain>

	* RELEASE 0.9b1.

	* Changed version to 0.9b1.

	* Fixed global_form selection on form set (Matt Singer).

2007-02-18  Titus Brown  <t@localhost.localdomain>

	* Added paste.lint tests into wsgi_intercept test code; fixed
	  only problem noted.

2007-02-15  Titus Brown  <t@localhost.localdomain>

	* Fixed browser.get_form to only allow valid form numbers (Mariusz).

	* Fixed showforms to properly display form numbers (Mariusz).

2007-02-14  Titus Brown  <t@localhost.localdomain>
