@@ -1,7 +1,8 @@
 import os
 import twilltestlib
-from tests import url
 
 def test():
+    url = twilltestlib.get_url()
+        
     twilltestlib.execute_twill_script('test-equiv-refresh.twill',
                                       initial_url=url)
