@@ -1,8 +1,8 @@
 import twilltestlib
-from tests import url
 
 def test():
     """
     Test the 'formfill' extension stuff.
     """
+    url = twilltestlib.get_url()
     twilltestlib.execute_twill_script('test-formfill.twill', initial_url=url)
