@@ -1,7 +1,7 @@
 import twill.commands
 import twilltestlib
-from tests import url
 
 def test():
-    twilltestlib.execute_twill_script('test-headers.twill',
-                                      initial_url=url)
+    url = twilltestlib.get_url()
+
+    twilltestlib.execute_twill_script('test-headers.twill', initial_url=url)
