@@ -1,6 +1,7 @@
 import os
 import twilltestlib
-from tests import url
 
 def test():
+    url = twilltestlib.get_url()
+
     twilltestlib.execute_twill_script('test-http-auth.twill', initial_url=url)
