@@ -1,5 +1,5 @@
 import twilltestlib
-from tests import url
 
 def test():
+    url = twilltestlib.get_url()
     twilltestlib.execute_twill_script('test-multisub.twill', initial_url=url)
